# cpp-arena

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  day1_tmp.txt
day8/: README.md
day9/: README.md
docs/: day7_log.csv
scripts/: precommit.sh
src/: day1_move.cpp  day1_smartptr.cpp  day1_span.cpp  day1_time.cpp  day3_physics.cpp  day4_physics.cpp  day5_ai.cpp  day6_geometry.cpp  day7_integration.cpp  day9_vec2.cpp
tests/: CMakeLists.txt  test_day1_basic.cpp  test_day3_physics.cpp  test_day4_physics.cpp  test_day5_ai.cpp  test_day6_geometry.cpp  test_day7_integration.cpp
tools/: .clang-format  .clang-tidy
